--- a/dashboard/schedule/board.css
+++ b/dashboard/schedule/board.css
@@ -5,5 +5,5 @@
 }
 
 button {
-  background: #3ee888;
+  background: #139f50;
 }
