--- a/dashboard/utility/board.css
+++ b/dashboard/utility/board.css
@@ -1,5 +1,5 @@
 button {
-  background: #eddb74;
+  background: #6f4a15;
 }
 
 #clock {
